# Battleships-ncurses

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: Battleships.cpp  Battleships.h  Field.cpp  Field.h  Ncurses.cpp  Ncurses.h  SettingField.cpp  SettingField.h  main.cpp  utils.cpp  utils.h
src/Application/: Application.cpp  Application.h  CMakeLists.txt
src/Ui/: CMakeLists.txt  Ui.cpp  Ui.h
src/Ui/Ncurses/: Game.cpp  Game.h  LocalGame.cpp  LocalGame.h  Ncurses.cpp  Ncurses.h  Ui.cpp  Ui.h
